<resources>
    <string name="app_name" translatable="false">MyStock</string>
    <string name="nome">Product\'s Name:</string>
    <string name="quantidade">Amount:</string>
    <string name="limparButton">Clear</string>
    <string name="cadastrarButton">Register</string>
    <string name="telaCadastro">Product registration screen</string>
    <string name="quantidadeLabel">Product\'s amount</string>
    <string name="nomeLabel">Product\'s name</string>
    <string name="dados_limpos">Cleaning data!</string>
    <string name="checkBoxImportante">Important</string>
    <string name="radioButtonComida">Food</string>
    <string name="radioButtonLimpeza">Cleaning</string>
    <string name="radioButtonHigiene">Hygiene</string>
    <string name="textViewCategoria">Choose the Category</string>
    <string name="criticidadeLabel">Criticality:</string>
    <string name="baixa">Low</string>
    <string name="media">Medium</string>
    <string name="alta">High</string>
    <string name="preciso_preencher_o_campo_nome_para_cadastrar">You must fill in the name field to register</string>
    <string name="preciso_preecher_o_campo_de_quantidade_para_cadastrar">You must fill in the amount field to register</string>
    <string name="preciso_escolher_a_categoria_para_cadastrar">You must fill in the category field to register</string>
    <string name="checkbox_importante_marcado_erro">The important checkbox has been checked, so it must have a valid criticality.</string>
    <string name="dados_selecionados">"Selected data: "</string>
    <string name="textViewCategoriaTelaLista">Category:</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="comida">Food</string>
    <string name="limpeza">Cleaning</string>
    <string name="higiene">Hygiene</string>
    <string name="semCriticidade">No Criticality</string>

    <string name="aguaSanitaria">Agua Sanitaria</string>
    <string name="pastaDeDente">Pasta de Dente</string>
    <string name="arroz">Arroz</string>
    <string name="detergente">Detergente</string>
    <string name="sabonete">Sabonete</string>
    <string name="shampoo">Shampoo</string>
    <string name="macarrao">Macarrão</string>
    <string name="bombril">Bombril</string>
    <string name="feijao">Feijão</string>
    <string name="carne">Carne</string>
    <string name="item_de_nome">The item named \"</string>
    <string name="foi_clicado">\"\nfoi clicado.</string>
    <string name="adicionar">Add</string>
    <string name="sore">About</string>
    <string name="appDescricao">Description: App created to manage your household stock</string>
    <string name="autor">Author: Rafael Sahyoun Rosa</string>
    <string name="cursoAutor">Course: Especialization in Java Technology</string>
    <string name="emailAutor">Email: rafaelsahyoun@gmail.com</string>
    <string name="linkedinAutor" translatable="false">https://www.linkedin.com/in/rafael-sahyoun/</string>
    <string name="cancelar">Cancel</string>
    <string name="n_o_foi_poss_vel_abrir_o_site">It was not possible to open the URL</string>
    <string name="editar">Edit</string>
    <string name="deletar">Delete</string>
    <string name="novo_produto">New Product</string>
    <string name="editar_produto">Edit Product</string>
    <string name="sugerir_campos">Fill suggestions</string>
    <string name="aviso">Warning</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="realmente_deseja_apagar">Do you really want to delete?</string>
    <string name="error_while_trying_to_save">Error while trying to save</string>
    <string name="error_while_trying_to_save_the_edition">Error while trying to save the edition</string>
    <string name="error_while_trying_to_delete">Error while trying to delete</string>


</resources>