<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ProdutoCadastroActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/telaCadastro">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/nome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="200dp"
                android:layout_height="47dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="text|textCapWords"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/quantidade"
                app:layout_constraintStart_toStartOf="@+id/editTextNome"
                app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

            <EditText
                android:id="@+id/editTextQuantidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <CheckBox
                android:id="@+id/checkBoxImportante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/checkBoxImportante"
                app:layout_constraintStart_toStartOf="@+id/editTextQuantidade"
                app:layout_constraintTop_toBottomOf="@+id/editTextQuantidade" />

            <RadioGroup
                android:id="@+id/radioGroupCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/textViewCategoria"
                app:layout_constraintTop_toBottomOf="@+id/textViewCategoria">

                <RadioButton
                    android:id="@+id/radioButtonComida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="0"
                    android:text="@string/radioButtonComida" />

                <RadioButton
                    android:id="@+id/radioButtonLimpeza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:text="@string/radioButtonLimpeza" />

                <RadioButton
                    android:id="@+id/radioButtonHigiene"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="2"
                    android:text="@string/radioButtonHigiene" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/textViewCategoria"
                app:layout_constraintStart_toStartOf="@+id/checkBoxImportante"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCriticidade" />

            <Spinner
                android:id="@+id/spinnerCriticidade"
                android:layout_width="361dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/criticidadeLabel"
                app:layout_constraintTop_toBottomOf="@+id/criticidadeLabel" />

            <TextView
                android:id="@+id/criticidadeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/criticidadeLabel"
                app:layout_constraintStart_toStartOf="@+id/checkBoxImportante"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxImportante" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </HorizontalScrollView>


</ScrollView>
