<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewValorNome"
        android:layout_width="268dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewNome"
        app:layout_constraintTop_toTopOf="@+id/textViewNome" />

    <TextView
        android:id="@+id/textViewQuantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/quantidade"
        app:layout_constraintStart_toStartOf="@+id/textViewNome"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

    <TextView
        android:id="@+id/textViewValorQuantidade"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewQuantidade"
        app:layout_constraintStart_toEndOf="@+id/textViewQuantidade"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorNome"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewImportante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/checkBoxImportante"
        app:layout_constraintStart_toStartOf="@+id/textViewNome"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorQuantidade" />

    <TextView
        android:id="@+id/textViewValorImportante"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textViewValorQuantidade"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorQuantidade" />

    <TextView
        android:id="@+id/textViewCriticidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/criticidadeLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewCategoriaTelaLista"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorQuantidade" />

    <TextView
        android:id="@+id/textViewValorCriticidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textViewValorCategoria"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorCategoria" />

    <TextView
        android:id="@+id/textViewCategoriaTelaLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewCategoriaTelaLista"
        app:layout_constraintStart_toEndOf="@+id/textViewValorQuantidade"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorNome" />

    <TextView
        android:id="@+id/textViewValorCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@+id/textViewCategoriaTelaLista"
        app:layout_constraintTop_toTopOf="@+id/textViewCategoriaTelaLista" />
</androidx.constraintlayout.widget.ConstraintLayout>